<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ayman.dexterlab.com.sudangas.EditStationActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attention"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="3dp">

                <EditText
                    android:id="@+id/station_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/station_name"
                    android:inputType="text"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="3dp"
                android:id="@+id/station_location_view">

                <EditText
                    android:id="@+id/station_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="3dp"
                android:id="@+id/car_model_view">

                <EditText
                    android:id="@+id/tanker_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:hint="@string/tanker_time"
                    android:inputType="text"
                    android:focusableInTouchMode="false"
                    />
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/checkbox_benzene"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/benzene"/>
            <CheckBox
                android:id="@+id/checkbox_gasoline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/gasoline"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="3dp">

                <EditText
                    android:id="@+id/station_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:hint="@string/line_length"
                    android:inputType="number"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="3dp">

                <EditText
                    android:id="@+id/station_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:ems="10"
                    android:hint="@string/notes"
                    android:inputType="text"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:text="@string/save"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
